maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:17: error: ';' expected but 'else' found.
    }else{
     ^