maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    if (allerAuNord){
      avance()
    }
    else (keepHandOnSideWall()==true){
      if (!estFaceMur()){
        avance()
      }else{
        droite()
        if (estFaceMur()){
          droite()
        }
        avance()
      }
    }else{
      gauche()
      avance()
    }
  }
  prendBiscuit()
}

def keepHandOnSideWall():Boolean={
  gauche()
  if (estFaceMur()){
    droite()
    return true;
  }else{
    droite()
    return false;
  }
}

def allerAuNord():Boolean={
  if (estFaceMur){
    return false
  }
	return true
}